--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -42,6 +42,16 @@
             android:layout_centerHorizontal="true"
             android:onClick="verEn3D"
             android:text="VER EN 3D" />
+        <Button
+            android:id="@+id/calificar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/calificacion"
+            android:onClick="calificar"
+            android:textSize="10sp"
+            android:layout_toRightOf="@+id/ver"
+            android:layout_toLeftOf="@+id/carrito"
+            android:text="Calificar" />
 
         <ImageButton
             android:id="@+id/carrito"
